updated html and css

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <article>
         <h1>Small Businesses More Vulnerable To Borrow Short-Term Loans Post-Pandemic</h1>
         <p class="byline">By Mrinalini Nayak</p>
+       <h2>37 out of 50 U.S. States have capped the lending amount and interest rates in an attempt to regulate payday loans.</h2>
+       <img src="image.png" alt="Feature Image" class = "feature-image">
+       <p class="image-description">Representational Image: Calculating expenses including loans.</p>
+
     
 
     <p>American small businesses are borrowing short term loans called Merchant Cash Advance (MCA) to tackle rising costs due to inflation. These loans are tempting as business owners started running out of financial reserves, but willing to take on huge interest rates for quick solutions.</p>
@@ -22,7 +26,13 @@
 
     <p>The Making Ends Meet 2022 report published by the Consumer Finance Protection Bureau states that in 2021, small businesses could afford to pay their bills comfortably due to the tight labor market, government aid and reduced overall spending. By 2022, these factors started declining, painting a picture of uncertainty for most households and businesses. The CFPB is a federal agency that protects consumers in the financial marketplace.</p>
 
-    <p>Social Finance, Inc (SoFi) is a popular online website for such loans. It offers a wide range of loans from student loans to mortgage loans to small business financing. The company has received close to a 1000 complaints according to the CFPB’s "Consumer Complaint Database," a portal designed for consumers to file complaints with the agency. When a consumer reports their issue to the agency, the company responds to it - a copy of which is unavailable to the public. The consumer can then choose to dispute this response based on their satisfaction.</p>
+    <p>Social Finance, Inc (SoFi) is a popular online website for such loans. It offers a wide range of loans from student loans to mortgage /
+       loans to small business financing. The company has received close to a 1000 complaints according to the /
+       CFPB’s "Consumer Complaint Database," a portal designed for consumers to file complaints with the agency. /
+       When a consumer reports their issue to the agency, the company responds to it - a copy of which is unavailable to the public. The consumer can then choose to dispute this response based on their satisfaction.</p>
+
+       <img src="graph.png" alt="Graph">
+       <p class="graph-description"> This graph shows the number of complaints against SoFi has gone up since the start of the pandemic.</p>
 
     <p>Out of the 1000 complaints, at least 21 customers said they disputed the resolution offered by SoFi. 64 said they did not dispute the resolution and the remaining responses were unavailable.</p>
 
